feat: se crea pagina peliculas, se agrega interfaz de respuesta de api peliculas

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prueba-api-peliculas",
-  "version": "0.0.1",
+  "name": "prueba-jorge-saavedra-209725614",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
